[package]
name = "liq"
version = "0.1.0"
authors = ["yasushisakai <ysshski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.12.1"
term = "*"
termion = "1.5.*"
sha2 = "0.9.2"
bs58 = "0.4.0"
